# jobless-mcp

./: .gitignore  LICENSE  README.md  SECURITY.md  gemini-extension.json  pyproject.toml  server.json  smithery.yaml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
examples/: claude-code.md  claude-desktop.json
jobless_mcp/: __init__.py  client.py  server.py  tools.py
tests/: test_tools.py
