[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jobless-mcp"
version = "0.1.0"
description = "Personalized job search inside Claude — Jobless MCP server (stdio + Streamable HTTP)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Belmin Kurtanovic" }]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]
keywords = ["mcp", "claude", "claude-code", "job-search", "jobless", "ai-tools", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://jobless.dev/mcp"
Repository = "https://github.com/bendza/jobless-mcp"
Issues = "https://github.com/bendza/jobless-mcp/issues"

[project.scripts]
jobless-mcp = "jobless_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["jobless_mcp"]
